--- a/app/src/main/res/layout/card_view.xml
+++ b/app/src/main/res/layout/card_view.xml
@@ -1,125 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:gravity="center"
+    android:orientation="vertical">
 
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
-        android:layout_width="0dp"
-        android:layout_height="260dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
-        app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         tools:cardBackgroundColor="@color/common_google_signin_btn_text_dark_default"
-        tools:ignore="MissingConstraints">
+        tools:ignore="MissingConstraints"
+        android:clickable="true"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="0dp"
+            android:gravity="center"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/screenname"
-                android:layout_width="match_parent"
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="0dp"
 
                 android:layout_marginLeft="0dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="0dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginRight="0dp"
                 android:layout_marginBottom="0dp"
-                android:hint="Screen Name"
+                android:hint="Card Number"
                 android:textAlignment="center"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textSize="24sp" />
 
-            <ImageView
-                android:id="@+id/screenimage"
+            <TextView
+                android:id="@+id/textView2"
                 android:layout_width="wrap_content"
-                android:layout_height="118dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="-5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginBottom="2dp"
-                android:layout_weight="1"
-                android:contentDescription="TODO"
-                android:tag="image_tag"
-                android:textAlignment="center" />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="82dp"
-            android:layout_marginVertical="160dp"
-            android:layout_marginTop="0dp"
-            android:orientation="vertical">
-
-            <View
-                android:id="@+id/divider5"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="?android:attr/listDivider" />
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
+                android:text="Demo Text" />
 
             <TextView
-                android:id="@+id/m1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-
-                android:textSize="12sp" />
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="TextView" />
 
             <TextView
-                android:id="@+id/m2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:text="TextView" />
 
-                android:textSize="12sp" />
 
-            <TextView
-                android:id="@+id/m3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/m4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/booking"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                  android:hint="Booking"
-                android:textAlignment="center"
-                android:textSize="10sp"
-                android:textStyle="bold" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.LinearLayoutCompat>
